# QuickDict

./: CMakeLists.txt
.github/workflows/: build-test.yml
QuickDict/: CMakeLists.txt  configcenter.cpp  dictindex.h  main.cpp  mdxdict.cpp  mobidict.cpp  qimagecvmat.cpp  quickdict.cpp  quickdict.h
QuickDict/qml/: About.ui.qml  Lookup.ui.qml  Settings.ui.qml  Translation.ui.qml  home.qml
QuickDict/qml/components/: Phonetic.ui.qml
cmake/: CPackOptions.cmake
contrib/: init.qml
contrib/DeepLTranslate/: DeepLTranslate.qml
contrib/ExampleDict/: ExampleDict.qml
contrib/GoogleTTS/: GoogleTTS.qml  qmldir
contrib/MockDict/: data.js
contrib/MoeDict/: MoeDict.qml
contrib/OxfordDictionaries/: OxfordDictionaries.qml
